# ScoutMath

./: CMakeLists.txt  README.md
Include/Scout/: Math.h
Src/: ScoutMath.cpp
